Fix add new widget button changing size in dark mode.

--- a/src/views/settings/Settings.sass
+++ b/src/views/settings/Settings.sass
@@ -131,7 +131,7 @@ $scrollbar-thumb-hover-dark: #555555
             // Add dark mode styles for primary inputs
             .dark &
                 background-color: $dark-input-bg
-                border: none
+                border: 0.25em solid #2d2d2d
 
     h2, h3, h4
         .dark &
